--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,3 +1,5 @@
+auxiliary.org-nbphpcouncil-modules-php-ci.enabled=true
+auxiliary.org-nbphpcouncil-modules-php-ci.version=3
 auxiliary.org-netbeans-modules-css-prep.less_2e_compiler_2e_options=
 auxiliary.org-netbeans-modules-css-prep.less_2e_enabled=false
 auxiliary.org-netbeans-modules-css-prep.less_2e_mappings=/less:/css
